--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,13 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "npm i && npm run playwright-install && npm run envinfo"
+          command: |
+            mkdir /tmp/artifacts
+            npm ci
+            npm run playwright-install
+            npm run envinfo > /tmp/artifacts/envinfo.txt
+      - store_artifacts:
+          path: /tmp/artifacts
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
